# yamvoice

./: AboutDlg.cpp  AudioManager.cpp  AudioManagerALSA.cpp  AudioManagerPulse.cpp  AudioManagerSndio.cpp  CMakeLists.txt  Configure.cpp  MainWindow.cpp  README.md  SettingsDlg.cpp  SettingsDlgALSA.cpp  SettingsDlgPulse.cpp  SettingsDlgSndio.cpp  UnixDgramSocket.cpp
po/: Makefile  README.md  it.po  yamvoice.pot
